--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.26)
 project(LifeGmae)
 
 
@@ -8,8 +8,12 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 
-add_executable(LifeGame src/main.cpp src/shaders/shader.h)
+add_executable(LifeGame src/main.cpp src/shaders/shader.cpp)
 target_link_libraries(LifeGame PRIVATE glfw glm::glm opengl32 glad::glad)
 
+set(GLSL_FILES
+        src/shaders/shader.fs
+        src/shaders/shader.vs
+)
 
-
+add_definitions(-DGLSL_DIR="${CMAKE_SOURCE_DIR}/src/shaders/")
