--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 
-add_executable(LifeGame src/main.cpp src/shaders/shader.cpp)
+add_executable(LifeGame src/main.cpp src/shaders/shader.cpp ./deps/stb/stb_image.h)
 target_link_libraries(LifeGame PRIVATE glfw glm::glm opengl32 glad::glad)
 
 set(GLSL_FILES
@@ -17,3 +17,4 @@ set(GLSL_FILES
 )
 
 add_definitions(-DGLSL_DIR="${CMAKE_SOURCE_DIR}/src/shaders/")
+add_definitions(-DTEXTURE_DIR="${CMAKE_SOURCE_DIR}/assets/texture/")
