--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,16 @@ find_package(glad CONFIG REQUIRED)
 
 add_executable(LifeGame src/main.cpp src/shaders/shader.cpp ./deps/stb/stb_image.h)
 target_link_libraries(LifeGame PRIVATE glfw glm::glm opengl32 glad::glad)
+target_include_directories(LifeGame PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
 set(GLSL_FILES
         src/shaders/shader.fs
         src/shaders/shader.vs
 )
 
-add_definitions(-DGLSL_DIR="${CMAKE_SOURCE_DIR}/src/shaders/")
+add_definitions(-DGLSL_DIR="${CMAKE_SOURCE_DIR}/src/shaders/" -DGLM_ENABLE_EXPERIMENTAL)
 add_definitions(-DTEXTURE_DIR="${CMAKE_SOURCE_DIR}/assets/texture/")
 
 
 add_executable(LifeGame2dTest src/tests/testLogic.cpp)
+target_include_directories(LifeGame2dTest PRIVATE ${CMAKE_SOURCE_DIR}/src)
