feat: render multiple cubes, add model and scene class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,14 +12,12 @@ add_executable(LifeGame src/main.cpp src/shaders/shader.cpp ./deps/stb/stb_image
 target_link_libraries(LifeGame PRIVATE glfw glm::glm opengl32 glad::glad)
 target_include_directories(LifeGame PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
-set(GLSL_FILES
-        src/shaders/shader.fs
-        src/shaders/shader.vs
-)
+add_executable(LifeGameCubeTest src/tests/TestCube.cpp src/shaders/shader.cpp ./deps/stb/stb_image.h)
+target_link_libraries(LifeGameCubeTest PRIVATE glfw glm::glm opengl32 glad::glad)
+target_include_directories(LifeGameCubeTest PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
 add_definitions(-DGLSL_DIR="${CMAKE_SOURCE_DIR}/src/shaders/" -DGLM_ENABLE_EXPERIMENTAL)
 add_definitions(-DTEXTURE_DIR="${CMAKE_SOURCE_DIR}/assets/texture/")
-
 
 add_executable(LifeGame2dTest src/tests/testLogic.cpp)
 target_include_directories(LifeGame2dTest PRIVATE ${CMAKE_SOURCE_DIR}/src)
