add arrow obj file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,16 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 
+add_library(common INTERFACE)
+
+target_link_libraries(common INTERFACE glfw glm::glm opengl32 glad::glad)
+
 add_executable(LifeGame src/main.cpp src/shaders/shader.cpp ./deps/stb/stb_image.h)
-target_link_libraries(LifeGame PRIVATE glfw glm::glm opengl32 glad::glad)
-target_include_directories(LifeGame PRIVATE ${CMAKE_SOURCE_DIR}/src)
+target_link_libraries(LifeGame PUBLIC common)
+target_include_directories(LifeGame PUBLIC ${CMAKE_SOURCE_DIR}/src)
 
 add_executable(LifeGameCubeTest src/tests/TestCube.cpp src/shaders/shader.cpp ./deps/stb/stb_image.h)
-target_link_libraries(LifeGameCubeTest PRIVATE glfw glm::glm opengl32 glad::glad)
+target_link_libraries(LifeGameCubeTest PUBLIC common)
 target_include_directories(LifeGameCubeTest PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
 add_definitions(-DGLSL_DIR="${CMAKE_SOURCE_DIR}/src/shaders/" -DGLM_ENABLE_EXPERIMENTAL)
@@ -21,3 +25,4 @@ add_definitions(-DTEXTURE_DIR="${CMAKE_SOURCE_DIR}/assets/texture/")
 
 add_executable(LifeGame2dTest src/tests/testLogic.cpp)
 target_include_directories(LifeGame2dTest PRIVATE ${CMAKE_SOURCE_DIR}/src)
+target_link_libraries(LifeGame2dTest PUBLIC common)
