--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,11 @@ set(CMAKE_CXX_STANDARD 23)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
+find_package(OpenGL REQUIRED)
 
 add_library(common INTERFACE)
 
-target_link_libraries(common INTERFACE glfw glm::glm opengl32 glad::glad)
+target_link_libraries(common INTERFACE glfw glm::glm glad::glad OpenGL::GL)
 
 add_executable(LifeGame src/main.cpp src/shaders/shader.cpp ./deps/stb/stb_image.h)
 target_link_libraries(LifeGame PUBLIC common)
@@ -23,6 +24,6 @@ target_include_directories(LifeGameCubeTest PRIVATE ${CMAKE_SOURCE_DIR}/src)
 add_definitions(-DGLSL_DIR="${CMAKE_SOURCE_DIR}/src/shaders/" -DGLM_ENABLE_EXPERIMENTAL)
 add_definitions(-DTEXTURE_DIR="${CMAKE_SOURCE_DIR}/assets/texture/")
 
-add_executable(LifeGame2dTest src/tests/testLogic.cpp)
+add_executable(LifeGame2dTest src/tests/TestLogic.cpp)
 target_include_directories(LifeGame2dTest PRIVATE ${CMAKE_SOURCE_DIR}/src)
 target_link_libraries(LifeGame2dTest PUBLIC common)
