--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 
-add_executable(LifeGame src/main.cpp src/shaders/shader.cpp ./deps/stb/stb_image.h)
+add_executable(LifeGame src/main.cpp src/shaders/shader.cpp src/light/Light.cpp ./deps/stb/stb_image.h)
 target_link_libraries(LifeGame PRIVATE glfw glm::glm opengl32 glad::glad)
 target_include_directories(LifeGame PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
