feat: added gizmo at top right, test text render succeed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ target_link_libraries(LifeGameCubeTest PUBLIC common)
 add_definitions(-DGLSL_DIR="${CMAKE_SOURCE_DIR}/src/shaders/" -DGLM_ENABLE_EXPERIMENTAL)
 add_definitions(-DTEXTURE_DIR="${CMAKE_SOURCE_DIR}/assets/texture/")
 add_definitions(-DMODEL_DIR="${CMAKE_SOURCE_DIR}/assets/models/")
+add_definitions(-DFONT_DIR="${CMAKE_SOURCE_DIR}/assets/fonts/")
 
 add_executable(LifeGame2dTest src/tests/TestLogic.cpp)
 target_link_libraries(LifeGame2dTest PUBLIC common)
