feat: added sphere generation into system, based on icosahedron

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_library(common_headers INTERFACE
         src/model/Material.hpp
         src/ui/KeyboardInput.hpp
         src/geometry/Icosahedron.hpp
+        src/geometry/Sphere.hpp
 )
 target_link_libraries(common_headers INTERFACE Freetype::Freetype)
 target_include_directories(common_headers INTERFACE ${CMAKE_SOURCE_DIR}/src)
