--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ add_library(common_headers INTERFACE
         src/raster/bmp.hpp
         src/raster/material.hpp
         src/raster/utils.hpp
+        src/raster/aabb.hpp
+        src/raster/bvh_node.hpp
 )
 target_link_libraries(common_headers INTERFACE Freetype::Freetype)
 target_include_directories(common_headers INTERFACE ${CMAKE_SOURCE_DIR}/src)
